--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,9 @@ dependencies:
     sdk: flutter
   path_provider: ^2.1.3
   open_filex: ^4.4.0
-  gallery_saver: ^2.3.2
+  gallery_saver:
+    git:
+      url: https://github.com/Pavel401/gallery_saver.git
 
 dev_dependencies:
   flutter_test:
